# tic-tac-cv

./: .gitignore  CMakeLists.txt  README.md  board.cpp  board.h  main.cpp  minimax.lua  plotter.cpp  plotter.h  thresh.cpp  thresh.h  webcam.cpp
plotter/: Makefile  board.cc  plotter.cc  plotter.h
utils/: luatest.cpp
